@@ -28,7 +28,7 @@ unless defined? ResumeTools::VERSION
     module VERSION
       MAJOR = 0
       MINOR = 2
-      TINY  = 3
+      TINY  = 4
       STRING = [MAJOR, MINOR, TINY].join('.')
     end
   end
